Added registration
